# spectrum-os

./: .b4-config  .clang-tidy  .codespellrc  .editorconfig  .gitignore  README  README.license  release.nix  shell.nix
Documentation/: Gemfile  _config.yml  default.nix  gemset.nix  getting-spectrum.adoc  index.adoc  jekyll.nix
Documentation/_includes/: favicon.html
Documentation/_sass/custom/: custom.scss
Documentation/about/: architecture.adoc  index.adoc  requirements.adoc
Documentation/appendices/: index.adoc  user-partition.adoc  uuid-reference.adoc
Documentation/contributing/: b4.adoc  building-documentation.adoc  communication.adoc  first-patch.adoc  index.adoc  replying.adoc  reviewing-patches.adoc  testing-patches.adoc  working-with-patches.adoc  writing_documentation.adoc
Documentation/decisions/: 001-host-update-mechanism.adoc  002-install-options.adoc  003-partitioning.adoc  004-data-at-rest-encryption.adoc  005-virtual-machine-monitor.adoc  006-drivers-on-host.adoc  007-usb-virtual-machines.adoc  008-inter-vm-communication-mechanisms.adoc  index.adoc
Documentation/development/: b4.adoc  build-configuration.adoc  building-documentation.adoc  built-in-vms.adoc  checks.adoc  debugging.adoc  first-patch.adoc  index.adoc  release.adoc  replying.adoc  reviewing-patches.adoc  testing-patches.adoc  user-partition.adoc  uuid-reference.adoc  working-with-patches.adoc
Documentation/getting-started/: creating-vms.adoc  index.adoc  running-vms.adoc
Documentation/installation/: binary-cache.adoc  getting-spectrum.adoc  index.adoc
Documentation/scripts/: build.sh  undocumented-uuids.sh  update-gems.sh
Documentation/using-spectrum/: creating-custom-vms.adoc  creating-vms.adoc  index.adoc  running-vms.adoc  vm-file-access.adoc
host/initramfs/: Makefile  default.nix  extfs.nix  shell.nix
host/initramfs/etc/: fstab  getuuids  init  mdev.conf  probe
host/rootfs/: Makefile  default.nix  shell.nix
host/rootfs/etc/: fstab  init  mdev.conf  shared-dir
host/start-vm/: ch.rs  default.nix  lib.rs  meson.build  s6.rs  shell.nix  start-vm.rs
host/start-vm/tests/: helper.rs  meson.build  vm_command-basic.rs  vm_command-multiple-disks.rs  vm_command-shared-dir.rs
host/start-vmm/: ch.h  ch.rs  default.nix  fork.c  fork.rs  lib.rs  meson.build  meson_options.txt  net-util.c  net-util.h  net.c  net.rs  s6.rs  shell.nix  start-vmm.rs  unix.c  unix.rs
host/start-vmm/subprojects/: itoa.wrap  miniserde.wrap  proc-macro2.wrap  quote.wrap  ryu.wrap  syn.wrap  unicode-ident.wrap
host/start-vmm/subprojects/packagefiles/itoa/: meson.build
host/start-vmm/subprojects/packagefiles/miniserde/: meson.build
host/start-vmm/subprojects/packagefiles/proc-macro2/: meson.build
host/start-vmm/subprojects/packagefiles/quote/: meson.build
host/start-vmm/subprojects/packagefiles/ryu/: meson.build  meson_options.txt
host/start-vmm/subprojects/packagefiles/syn/: meson.build
host/start-vmm/subprojects/packagefiles/unicode-ident/: meson.build
host/start-vmm/tests/: bridge_add_if.c  bridge_remove_if.c  helper.rs  if_rename.c  meson.build  tap_open.c  vm_command-basic.rs  vm_command-multiple-disks.rs  vm_command-shared-dir.rs
img/app/: Makefile  default.nix  shell.nix
img/app/etc/: fstab  mdev.conf  passwd
img/app/scripts/: start-virtiofsd.elb
img/live/: Makefile
lib/: call-package.nix  common.mk  config.default.nix  config.nix  eval-config.nix  nixpkgs.default.nix  overlay-package.nix
nix/: checks.nix  eval-config.nix  src.nix
pkgs/: default.nix  overlaid.nix  overlay.nix
pkgs/cloud-hypervisor/: 0001-build-use-local-vhost.patch  0002-virtio-devices-add-a-GPU-device.patch  Cargo.lock.license  default.nix
pkgs/cloud-hypervisor/vhost/: 0001-vhost-fix-receiving-reply-payloads.patch  0001-vhost_user-add-get_size-to-MsgHeader.patch  0002-vhost-fix-receiving-reply-payloads.patch  0002-vhost_user-add-shared-memory-region-support.patch  0003-vhost-user-add-protocol-flag-for-shmem.patch  0003-vhost_user-add-protocol-flag-for-shmem.patch  0003-vhost_user-add-shared-memory-region-support.patch  0004-vhost_user-add-protocol-flag-for-shmem.patch  0004-vhost_user-renumber-SHARED_MEMORY_REGIONS.patch  0004-vmm_vhost-renumber-SHARED_MEMORY_REGIONS.patch  (+1 more)
pkgs/dbus/: 0001-doc-add-vsock-address-format-to-the-spec.patch  0002-build-sys-add-enable-vsock-option.patch  0003-unix-add-vsock-support-to-_dbus_append_address_from_.patch  0004-dbus-add-_dbus_listen_vsock.patch  0005-dbus-add-vsock-server-support.patch  0006-dbus-add-_dbus_connect_vsock.patch  0007-dbus-add-vsock-client-support.patch  0008-test-add-simple-loopback-vsock-test.patch  0009-vsock-add-allow-CIDs.-on-listenable-address.patch  default.nix
pkgs/foot/: Add-support-for-opening-an-existing-PTY.patch  default.nix
pkgs/meson/: default.nix
release/: checks.nix
release/checks/: codespell.nix  deadnix.nix  default.nix  doc-anchors.nix  doc-links.nix  no-roothash.nix  pkg-tests.nix  reuse.nix  rustfmt.nix  shellcheck.nix  start-vm.nix  try.nix  uncrustify.nix
release/checks/wayland/surface-notify/: default.nix  meson.build  module.c  shell.nix
release/combined/: default.nix  eosimages.nix  grub.cfg.in  run-vm.nix
release/installer/: configuration.nix  default.nix  run-vm.nix
release/live/: Makefile  default.nix  shell.nix
scripts/: dist-cloud-hypervisor.sh  format-uuid.sh  make-erofs.sh  make-gpt.sh  run-cloud-hypervisor.sh  run-qemu.sh  run-spectrum-vm.c  run-spectrum-vm.nix  sfdisk-field.awk  update-nixpkgs.sh  with-taps.elb
tools/lseek/: .gitignore  Makefile  default.nix  lseek.c  shell.nix
tools/xdg-desktop-portal-spectrum/: default.nix  meson.build  meson_options.txt  org.freedesktop.impl.portal.desktop.spectrum.service.in  shell.nix  spectrum.portal  xdg-desktop-portal-spectrum.c
tools/xdg-desktop-portal-spectrum-host/: Cargo.toml  default.nix
tools/xdg-desktop-portal-spectrum-host/src/: documents.rs  file_chooser.rs  main.rs
vm/: make-vm.nix
vm-lib/: make-vm.nix
vm/app/: catgirl.nix  firefox.nix  foot.nix  gnome-text-editor.nix  hello-wayland.nix  lynx.nix  mg.nix  poweroff.nix
(+57 files in other folders)
