# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2024 Alyssa Ross <hi@alyssa.is>

[package]
name = "xdg-desktop-portal-spectrum-host"
version = "0.1.0"
edition = "2021"

[dependencies]
async-executor = { version = "1.12.0", features = ["static"] }
async-io = "2.3.2"
futures-lite = "2.3.0"
percent-encoding = "2.3.1"
rustix = "0.38.34"
url = "2.5.0"
zbus = "4.3.0"
